Fix Empty collection when using remote mysql database

This patch marks the MountPointManager as finished when
DynamicCollection setting is set to false (in which case the
MountPointManager just returns device ids with -1)

See also http://amarok.community.kde.org/Dynamic_Collection

BUG: 265419
FIXED-IN: 2.7